<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ChartActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/chart_for_stock"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stockSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/symbol"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <Button
                android:id="@+id/DetailsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/details" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/RefreshBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/refresh" />
            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/VolumeChartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="13sp"
                android:text="@string/volume" />
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="330dp"
            android:layout_height="450dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:padding="5dp" />

        <TextView
            android:id="@+id/CurrencyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|center_vertical"
            android:text="[CURRENCY]"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
